# aoc

./: .eslintrc.js  .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: codspeed.yml
2015/days/3/: index.ts
2015/days/6/: example.txt
2015/days/7/: index.ts
2015/src/day01/: index.ts
2015/src/day02/: index.ts
2015/src/day03/: index.ts
2015/src/day04/: index.ts
2015/src/day05/: index.ts
2015/src/day06/: index.ts
2023/: Cargo.toml
2023/benches/: benchmark.rs
2023/src/: lib.rs  main.rs
2023/src/day01/: mod.rs
2023/src/day02/: mod.rs
2023/src/day03/: mod.rs
2023/src/day04/: mod.rs
2023/src/day05/: mod.rs
2023/src/day06/: mod.rs
2023/src/day07/: mod.rs
2023/src/day08/: mod.rs
2023/src/day09/: mod.rs
2023/src/day10/: mod.rs
2023/src/day11/: mod.rs
2023/src/day12/: mod.rs
2023/src/day13/: mod.rs
2023/src/day14/: mod.rs
2023/src/day15/: mod.rs
2023/src/day16/: mod.rs
2023/src/day17/: mod.rs
2023/src/day18/: mod.rs
2023/src/day19/: mod.rs
2023/src/day20/: mod.rs
2023/src/day21/: grid  mod.rs
2023/src/day22/: mod.rs
2024/: Cargo.toml
2024/benches/: bench_days.rs
2024/src/: lib.rs  main.rs
2024/src/day01/: mod.rs
2024/src/day1/: mod.rs
2024/src/day10/: mod.rs
2024/src/day11/: mod.rs
2024/src/day12/: mod.rs
2024/src/day13/: mod.rs
2024/src/day14/: mod.rs
2024/src/day15/: mod.rs
2024/src/day16/: mod.rs
2024/src/day17/: mod.rs
2024/src/day18/: mod.rs
2024/src/day19/: mod.rs
2024/src/day2/: mod.rs
2024/src/day20/: mod.rs
2024/src/day21/: mod.rs
2024/src/day22/: mod.rs
2024/src/day23/: mod.rs
2024/src/day24/: mod.rs
2024/src/day25/: mod.rs
2024/src/day3/: mod.rs
2024/src/day4/: mod.rs
2024/src/day5/: mod.rs
2024/src/day6/: mod.rs
2024/src/day7/: mod.rs
2024/src/day8/: mod.rs
2024/src/day9/: mod.rs
2025/: Cargo.toml
2025/src/: main.rs
2025/src/day1/: mod.rs
2025/src/day2/: mod.rs
2025/src/day3/: mod.rs
2025/src/day4/: mod.rs
2025/src/day5/: input.txt  mod.rs
2025/src/day6/: mod.rs
2025/src/day7/: mod.rs
days/1/part2/: index.ts
days/10/part2/: index.ts
rust-2023/: Cargo.toml
rust-2023/src/: main.rs
scripts/: init.js
template/: index.ts
template/rust/: mod.rs
utils/: logMatrix.ts  logMatrixStep.ts
(+103 files in other folders)
