[package]
name = "rust-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
parse-display = "0.8.2"
regex = "1.10.2"
lazy_static = "1.4.0"
itertools = "0.12.0"
indoc = "2.0.4"
strum = { version = "0.25.0", features = ["derive"] }
