[package]
name = "rust-2025"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
parse-display = "0.8.2"
regex = "1.10.2"
itertools = "0.12.0"
indoc = "2.0.4"
strum = { version = "0.25.0", features = ["derive"] }
gcd = "2.3.0"
image = "0.24.7"
rayon = "1.8.0"
paste = "1.0.15"
rustc-hash = { version = "2.1.0", features = ["nightly"] }
arrayvec = "0.7.6"

[dev-dependencies]
criterion = { version = "4.1.0", package = "codspeed-criterion-compat", default-features = false }
